maze.lessons.maze.island.IslandMaze.scala.error
Escaper:32: error: expected class or object definition
def whereWall():Int ={  
^Escaper:55: error: Unmatched closing brace '}' ignored here
}
^